tests/error/modifier_errors/higher_order.err
Error: Unitary flag mismatch (at $FILE:18:16)
   | 
16 |     q = qubit()
17 |     with dagger:
18 |         test_ho(h, q)
   |                 ^ Expected function with unitary flags `UnitaryFlags.NoFlags`,
   |                   got `UnitaryFlags.Unitary`

Guppy compilation failed due to 1 previous error
